fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,6 +212,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
 
 }
 #pictures img {
@@ -236,7 +237,7 @@ body {
 }
 .lightbox {
     position: absolute;
-    top: 80%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding-bottom: 5%;
